--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="bottom_tab_main">定位</string>
     <string name="bottom_tab_setting">设置</string>
-    <string name="bottom_tab_my">我的</string>
+    <string name="bottom_tab_collect">收集</string>
+    <string name="bottom_tab_finger">指纹</string>
 </resources>
